--- a/src/app/dialogs/custom-command-editor-dialog/custom-command-editor-dialog.component.html
+++ b/src/app/dialogs/custom-command-editor-dialog/custom-command-editor-dialog.component.html
@@ -4,161 +4,220 @@
 <div mat-dialog-content [formGroup]="form">
   <input type="hidden" formControlName="id" />
 
-  <!-- Command Name -->
-  <mat-form-field>
-    <mat-label>Command Name</mat-label>
-    <mat-icon matPrefix>
-      <ng-icon name="bootstrapExclamationLg"></ng-icon>
-    </mat-icon>
-    <input matInput formControlName="name" [readonly]="!!command.id" />
-  </mat-form-field>
-
-  <!-- Aliases -->
-  <fac-list-form-control label="Aliases" addPlaceholder="Add alias …" formControlName="aliases"></fac-list-form-control>
-
-  <!-- Responses -->
-  <h3>
-    Responses (<span>{{ responsesArray.controls.length }}</span
-    >)
-  </h3>
-  <div formArrayName="responses">
-    @for (response of responsesArray.controls; track $index) {
-      <div class="response-row">
-        <fac-custom-command-response-form [formControlName]="$index"></fac-custom-command-response-form>
-        <button mat-icon-button matTooltip="Remove response" (click)="removeResponse($index)">
-          <mat-icon>
-            <ng-icon name="bootstrapTrash"></ng-icon>
-          </mat-icon>
-        </button>
-      </div>
-    }
-
-    <div class="button-row">
-      <button mat-button (click)="addResponse()">
+  <mat-tab-group dynamicHeight>
+    <mat-tab>
+      <ng-template mat-tab-label>
         <mat-icon>
-          <ng-icon name="bootstrapPlus"></ng-icon>
+          <ng-icon name="bootstrapExclamationLg"></ng-icon>
         </mat-icon>
-        Add Response
-      </button>
-    </div>
-  </div>
-  <mat-form-field>
-    <mat-label>Response Mode</mat-label>
-    <mat-icon matPrefix>
-      <ng-icon [svg]="(selectedModeIcon$ | async)!"></ng-icon>
-    </mat-icon>
-    <mat-select formControlName="responseMode">
-      <mat-option value="First">
-        <mat-icon>
-          <ng-icon name="bootstrapPlayFill"></ng-icon>
-        </mat-icon>
-        First (Default)
-      </mat-option>
-      <mat-option value="PickOneRandom">
-        <mat-icon>
-          <ng-icon name="bootstrapShuffle"></ng-icon>
-        </mat-icon>
-        Pick one randomly
-      </mat-option>
-      <mat-option value="All">
-        <mat-icon>
-          <ng-icon name="bootstrapFastForwardFill"></ng-icon>
-        </mat-icon>
-        Run all
-      </mat-option>
-    </mat-select>
-    <mat-hint>{{ selectedModeTip$ | async }}</mat-hint>
-  </mat-form-field>
+        Basics
+      </ng-template>
 
-  <!-- Limitations -->
-  <h3>Limitations</h3>
-  <div formGroupName="limitations">
-    <mat-form-field>
-      <mat-label>Minimum Privilege Level</mat-label>
-      <mat-icon matPrefix>
-        <fac-privilege-icon
-          matPrefix
-          [privilege]="(selectedPrivilegeLevel$ | async)!"
-          [tooltip]="false"
-        ></fac-privilege-icon>
-      </mat-icon>
-      <mat-select formControlName="minLevel">
-        <!-- <mat-option value="SuperUser">Super User</mat-option> -->
-        @for (privilege of allPrivileges; track $index) {
-          <mat-option [value]="privilege.privilege">
+      <!-- Command Name -->
+      <mat-form-field>
+        <mat-label>Command Name</mat-label>
+        <mat-icon matPrefix>
+          <ng-icon name="bootstrapExclamationLg"></ng-icon>
+        </mat-icon>
+        <input matInput formControlName="name" [readonly]="!!command.id" />
+        <mat-hint>
+          This is the name of your command. Use only lowercase letters and numbers. Cannot contain spaces.
+        </mat-hint>
+      </mat-form-field>
+
+      <!-- Aliases -->
+      <fac-list-form-control
+        label="Aliases"
+        addPlaceholder="Add alias …"
+        formControlName="aliases"
+      ></fac-list-form-control>
+    </mat-tab>
+
+    <!-- Responses -->
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon>
+          <ng-icon name="bootstrapChatQuote"></ng-icon>
+        </mat-icon>
+        Responses
+      </ng-template>
+
+      <p>
+        Add a response to your command to fill it with life. You can add multiple responses and define how they should
+        be used.
+      </p>
+
+      <mat-form-field>
+        <mat-label>Response Mode</mat-label>
+        <mat-icon matPrefix>
+          <ng-icon [svg]="(selectedModeIcon$ | async)!"></ng-icon>
+        </mat-icon>
+        <mat-select formControlName="responseMode">
+          <mat-option value="First">
             <mat-icon>
-              <ng-icon [svg]="privilege.icon"></ng-icon>
+              <ng-icon name="bootstrapPlayFill"></ng-icon>
             </mat-icon>
-            {{ privilege.label }}
+            First (Default)
           </mat-option>
-        }
-      </mat-select>
-      <mat-hint> Users with a lower level will not be able to use this command. </mat-hint>
-    </mat-form-field>
-
-    <h4>Limited to Users</h4>
-    <fac-list-form-control
-      label="Limited to Users"
-      addPlaceholder="Add user …"
-      formControlName="limitedToUsers"
-    ></fac-list-form-control>
-
-    <h4>Cooldown</h4>
-    <div formArrayName="cooldown">
-      @for (cooldown of cooldownArray.controls; track $index) {
-        <div class="form-row" [formGroupName]="$index">
-          <mat-form-field>
-            <mat-label>Level</mat-label>
-            <mat-icon matPrefix>
-              <fac-privilege-icon
-                matPrefix
-                [privilege]="cooldown.get('level')!.value"
-                [tooltip]="false"
-              ></fac-privilege-icon>
-            </mat-icon>
-            <mat-select formControlName="level">
-              <!-- <mat-option value="SuperUser">Super User</mat-option> -->
-              @for (privilege of allPrivileges; track $index) {
-                <mat-option [value]="privilege.privilege">
-                  <mat-icon>
-                    <ng-icon [svg]="privilege.icon"></ng-icon>
-                  </mat-icon>
-                  {{ privilege.label }}
-                </mat-option>
-              }
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field>
-            <mat-label>Cooldown (milliseconds)</mat-label>
-            <input matInput type="number" formControlName="milliseconds" />
-          </mat-form-field>
-          <button mat-icon-button matTooltip="Remove cooldown" (click)="removeCooldown($index)">
+          <mat-option value="PickOneRandom">
             <mat-icon>
-              <ng-icon name="bootstrapTrash"></ng-icon>
+              <ng-icon name="bootstrapShuffle"></ng-icon>
             </mat-icon>
+            Pick one randomly
+          </mat-option>
+          <mat-option value="All">
+            <mat-icon>
+              <ng-icon name="bootstrapFastForwardFill"></ng-icon>
+            </mat-icon>
+            Run all
+          </mat-option>
+        </mat-select>
+        <mat-hint>{{ selectedModeTip$ | async }}</mat-hint>
+      </mat-form-field>
+      <mat-divider></mat-divider>
+
+      <div formArrayName="responses">
+        @for (response of responsesArray.controls; track $index) {
+          <div class="response-row">
+            <mat-icon class="response-icon">
+              <ng-icon [svg]="getResponseIcon(response)"></ng-icon>
+            </mat-icon>
+            <fac-custom-command-response-form [formControlName]="$index"></fac-custom-command-response-form>
+            <button mat-icon-button matTooltip="Remove response" (click)="removeResponse($index)">
+              <mat-icon>
+                <ng-icon name="bootstrapTrash"></ng-icon>
+              </mat-icon>
+            </button>
+          </div>
+          <mat-divider></mat-divider>
+        }
+
+        <div class="button-row" [matMenuTriggerFor]="addResponseMenu">
+          <button mat-button>
+            <mat-icon>
+              <ng-icon name="bootstrapPlus"></ng-icon>
+            </mat-icon>
+            Add Response
           </button>
+          <mat-menu #addResponseMenu="matMenu">
+            <button mat-menu-item (click)="addResponse('Text')">
+              <mat-icon>
+                <ng-icon name="bootstrapChatQuote"></ng-icon>
+              </mat-icon>
+              Add Text Response
+            </button>
+            <button mat-menu-item (click)="addResponse('Sound')">
+              <mat-icon>
+                <ng-icon name="bootstrapMusicNote"></ng-icon>
+              </mat-icon>
+              Add Sound Response
+            </button>
+          </mat-menu>
         </div>
-      }
-
-      <div class="button-row">
-        <button mat-button (click)="addCooldown()">
-          <mat-icon>
-            <ng-icon name="bootstrapPlus"></ng-icon>
-          </mat-icon>
-          Add Cooldown
-        </button>
       </div>
-    </div>
-    <!--
-    <input type="hidden" formControlName="cooldown" />
-    <mat-form-field>
-      <mat-label>Cooldown</mat-label>
-      <input matInput formControlName="cooldown" />
-    </mat-form-field>
-    -->
-  </div>
+    </mat-tab>
 
-  <pre>{{ form.value | json }}</pre>
+    <!-- Limitations -->
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon>
+          <ng-icon name="bootstrapLock"></ng-icon>
+        </mat-icon>
+        Limitations
+      </ng-template>
+
+      <div formGroupName="limitations">
+        <p>
+          Limitations allow you to restrict who can use this command. You can limit the command to specific privilege
+          levels, users, or add a cooldown.
+        </p>
+
+        <mat-form-field>
+          <mat-label>Minimum Privilege Level</mat-label>
+          <mat-icon matPrefix>
+            <fac-privilege-icon
+              matPrefix
+              [privilege]="(selectedPrivilegeLevel$ | async)!"
+              [tooltip]="false"
+            ></fac-privilege-icon>
+          </mat-icon>
+          <mat-select formControlName="minLevel">
+            <!-- <mat-option value="SuperUser">Super User</mat-option> -->
+            @for (privilege of allPrivileges; track $index) {
+              <mat-option [value]="privilege.privilege">
+                <mat-icon>
+                  <ng-icon [svg]="privilege.icon"></ng-icon>
+                </mat-icon>
+                {{ privilege.label }}
+              </mat-option>
+            }
+          </mat-select>
+          <mat-hint> Users with a lower level will not be able to use this command. </mat-hint>
+        </mat-form-field>
+
+        <h4>Limited to Users</h4>
+        <p>
+          If you only want specific users accessing this command, you can add their names here. Doing so will prevent
+          any other user from using this command, even when their privilege level is higher.
+        </p>
+        <fac-list-form-control
+          label="Limited to Users"
+          addPlaceholder="Add user …"
+          formControlName="limitedToUsers"
+        ></fac-list-form-control>
+
+        <h4>Cooldown</h4>
+        <p>To prevent people from spamming commands, you can define a cooldown for each privilege level.</p>
+        <div formArrayName="cooldown">
+          @for (cooldown of cooldownArray.controls; track $index) {
+            <div class="form-row" [formGroupName]="$index">
+              <mat-form-field>
+                <mat-label>Level</mat-label>
+                <mat-icon matPrefix>
+                  <fac-privilege-icon
+                    matPrefix
+                    [privilege]="cooldown.get('level')!.value"
+                    [tooltip]="false"
+                  ></fac-privilege-icon>
+                </mat-icon>
+                <mat-select formControlName="level">
+                  <!-- <mat-option value="SuperUser">Super User</mat-option> -->
+                  @for (privilege of allPrivileges; track $index) {
+                    <mat-option [value]="privilege.privilege">
+                      <mat-icon>
+                        <ng-icon [svg]="privilege.icon"></ng-icon>
+                      </mat-icon>
+                      {{ privilege.label }}
+                    </mat-option>
+                  }
+                </mat-select>
+              </mat-form-field>
+              <mat-form-field>
+                <mat-label>Cooldown (milliseconds)</mat-label>
+                <input matInput type="number" formControlName="milliseconds" />
+              </mat-form-field>
+              <button mat-icon-button matTooltip="Remove cooldown" (click)="removeCooldown($index)">
+                <mat-icon>
+                  <ng-icon name="bootstrapTrash"></ng-icon>
+                </mat-icon>
+              </button>
+            </div>
+          }
+
+          <div class="button-row">
+            <button mat-button (click)="addCooldown()">
+              <mat-icon>
+                <ng-icon name="bootstrapPlus"></ng-icon>
+              </mat-icon>
+              Add Cooldown
+            </button>
+          </div>
+        </div>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
+
+  <!-- <pre>{{ form.value | json }}</pre> -->
 </div>
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="undefined">Cancel</button>
