--- a/src/app/components/file-picker/file-picker.component.html
+++ b/src/app/components/file-picker/file-picker.component.html
@@ -1,7 +1,7 @@
 <mat-form-field>
   <mat-label>{{ label }}</mat-label>
   <input matInput readonly [(ngModel)]="value" />
-  <button mat-icon-button matSuffix matTooltip="Select file">
+  <button mat-icon-button matSuffix matTooltip="Select file" (click)="openFileDialog()">
     <mat-icon>
       <ng-icon name="bootstrapFolder2Open"></ng-icon>
     </mat-icon>
