--- a/src/app/dialogs/custom-command-editor-dialog/custom-command-editor-dialog.component.html
+++ b/src/app/dialogs/custom-command-editor-dialog/custom-command-editor-dialog.component.html
@@ -82,7 +82,10 @@
             <mat-icon class="response-icon">
               <ng-icon [svg]="getResponseIcon(response)"></ng-icon>
             </mat-icon>
-            <fac-custom-command-response-form [formControlName]="$index"></fac-custom-command-response-form>
+            <fac-custom-command-response-form
+              [formControlName]="$index"
+              [channelId]="ownerChannel$ | async"
+            ></fac-custom-command-response-form>
             <button mat-icon-button matTooltip="Remove response" (click)="removeResponse($index)">
               <mat-icon>
                 <ng-icon name="bootstrapTrash"></ng-icon>
@@ -217,7 +220,9 @@
     </mat-tab>
   </mat-tab-group>
 
-  <!-- <pre>{{ form.value | json }}</pre> -->
+  <!--
+  <pre>{{ form.value | json }}</pre>
+  -->
 </div>
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="undefined">Cancel</button>
