added hint to list form control

--- a/src/app/components/list-form-control/list-form-control.component.html
+++ b/src/app/components/list-form-control/list-form-control.component.html
@@ -17,4 +17,5 @@
     [matChipInputAddOnBlur]="false"
     (matChipInputTokenEnd)="addItem($event)"
   />
+  <mat-hint> Press <code>[ENTER]</code> or <code>,</code> to add additional items</mat-hint>
 </mat-form-field>
