can now create/delete commands

--- a/src/app/pages/commands/custom-commands/custom-commands.component.html
+++ b/src/app/pages/commands/custom-commands/custom-commands.component.html
@@ -27,5 +27,6 @@
     [allowDelete]="true"
     [allowDetail]="false"
     (editCommand)="editCommand($event)"
+    (deleteCommand)="deleteCommand($event)"
   ></fac-command-list>
 </div>
