preparing for build

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -14,17 +14,19 @@
         Home
       </button>
 
-      <button
-        mat-menu-item
-        routerLink="/debug"
-        routerLinkActive="mat-mdc-menu-item-highlighted"
-        queryParamsHandling="merge"
-      >
-        <mat-icon>
-          <ng-icon name="bootstrapBugFill"></ng-icon>
-        </mat-icon>
-        Debug
-      </button>
+      @if (debugFeaturesEnabled) {
+        <button
+          mat-menu-item
+          routerLink="/debug"
+          routerLinkActive="mat-mdc-menu-item-highlighted"
+          queryParamsHandling="merge"
+        >
+          <mat-icon>
+            <ng-icon name="bootstrapBugFill"></ng-icon>
+          </mat-icon>
+          Debug
+        </button>
+      }
 
       <mat-divider></mat-divider>
 
