--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="page-navigation">
   <fac-navigation></fac-navigation>
-  <fac-global-loading-indicator></fac-global-loading-indicator>
+  <!-- <fac-global-loading-indicator></fac-global-loading-indicator> -->
 </div>
 <div class="page-container">
   <router-outlet></router-outlet>
