--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -66,6 +66,17 @@
           </mat-icon>
           Files
         </button>
+        <button
+          mat-menu-item
+          routerLink="/stream-source/show-url"
+          routerLinkActive="mat-mdc-menu-item-highlighted"
+          queryParamsHandling="merge"
+        >
+          <mat-icon>
+            <ng-icon name="bootstrapWindowFullscreen"></ng-icon>
+          </mat-icon>
+          Stream Source
+        </button>
 
         <mat-divider></mat-divider>
         <button mat-menu-item routerLink="/profile" routerLinkActive="mat-mdc-menu-item-highlighted">
