--- a/src/app/pages/stream-source/show-url/show-url.component.html
+++ b/src/app/pages/stream-source/show-url/show-url.component.html
@@ -4,7 +4,10 @@
     <mat-card-subtitle>Use this link to add browser sources to OBS</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <p>Select the channel you want to use and copy the link below to add it as a browser source in OBS.</p>
+    <p>
+      Select the channel you want to use and copy the link below to add it as a browser source in OBS.
+      <b>Please do not share this link with anyone!</b>
+    </p>
     <div class="row">
       <fac-channel-selector></fac-channel-selector>
       <fac-stream-source-url [selectedChannel]="selectedChannel$ | async"></fac-stream-source-url>
