added version to header

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -145,5 +145,9 @@
     </mat-menu>
 
     <span>{{ title$ | async }}</span>
+
+    <span class="spacer"></span>
+
+    <span class="version" [matTooltip]="buildTime">{{ version }}</span>
   </mat-toolbar-row>
 </mat-toolbar>
