--- a/src/app/pages/settings/channel-aliases/channel-aliases.component.html
+++ b/src/app/pages/settings/channel-aliases/channel-aliases.component.html
@@ -24,7 +24,7 @@
     </mat-card-content>
     <mat-card-actions>
       <span class="spacer"></span>
-      <button mat-button (click)="onSaveChanges(form)">Save Changes</button>
+      <button mat-button color="primary" (click)="onSaveChanges(form)">Save Changes</button>
     </mat-card-actions>
   } @else {
     <mat-card-content>
