theme implemented (non-persistent atm)

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -168,6 +168,7 @@
 
     <span class="spacer"></span>
 
+    <fac-theme-button></fac-theme-button>
     <button
       mat-button
       class="version"
