--- a/src/app/pages/debug/debug.component.scss
+++ b/src/app/pages/debug/debug.component.scss
@@ -6,3 +6,41 @@
 mat-divider {
   margin: 20px 0;
 }
+
+.button-test {
+  section {
+    display: table;
+  }
+
+  mat-divider {
+    margin: 5px 0;
+  }
+  
+  .example-label {
+    display: table-cell;
+    font-size: 14px;
+    margin-left: 8px;
+    min-width: 120px;
+  }
+  
+  .example-button-row {
+    display: table-cell;
+    max-width: 600px;
+  }
+  
+  .example-button-row .mat-mdc-button-base {
+    margin: 8px 8px 8px 0;
+  }
+  
+  .example-flex-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  
+  .example-button-container {
+    display: flex;
+    justify-content: center;
+    width: 120px;
+  }  
+}
