--- a/src/app/components/theme-button/theme-button.component.html
+++ b/src/app/components/theme-button/theme-button.component.html
@@ -1,4 +1,4 @@
-<button mat-icon-button (click)="changeTheme()">
+<button mat-icon-button (click)="changeTheme()" matTooltip="Switch Theme">
   <mat-icon>
     <ng-icon [svg]="(themeIcon$ | async)!"></ng-icon>
   </mat-icon>
