added editor for timer messages

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -68,6 +68,17 @@
         </button>
         <button
           mat-menu-item
+          routerLink="/timer"
+          routerLinkActive="mat-mdc-menu-item-highlighted"
+          queryParamsHandling="merge"
+        >
+          <mat-icon>
+            <ng-icon name="bootstrapClockHistory"></ng-icon>
+          </mat-icon>
+          Timer Messages
+        </button>
+        <button
+          mat-menu-item
           routerLink="/stream-source/show-url"
           routerLinkActive="mat-mdc-menu-item-highlighted"
           queryParamsHandling="merge"
