--- a/src/app/pages/commands/built-in-commands/built-in-commands.component.html
+++ b/src/app/pages/commands/built-in-commands/built-in-commands.component.html
@@ -16,5 +16,6 @@
     [commands]="commands$ | async"
     (disableCommand)="disableCommand($event)"
     (showCommandDetails)="showCommandDetails($event)"
+    (editCommand)="editCommand($event)"
   ></fac-command-list>
 </div>
