added some missing documentation about placeholders

--- a/src/app/dialogs/custom-command-editor-dialog/custom-command-editor-dialog.component.html
+++ b/src/app/dialogs/custom-command-editor-dialog/custom-command-editor-dialog.component.html
@@ -79,6 +79,28 @@
       </mat-form-field>
       <mat-divider></mat-divider>
 
+      <p>
+        Responses are the messages that will be sent when the command is triggered. You can add text responses or sound
+        responses.
+      </p>
+      <p>You can also use placeholders in your text responses to add more dynamic content.</p>
+      <ul>
+        <li><code class="syntax-code">&#123;Caller&#125;</code>: The name of the user who called the command</li>
+        <li>
+          <code class="syntax-code">&#123;Params.X&#125;</code>: If provided, the parameter at position
+          <code class="syntax-code">X</code>. The first parameter is located at <code class="syntax-code">0</code> (i.e.
+          <code class="syntax-code">&#123;Params.0&#125;</code>).
+        </li>
+        <li>
+          <code class="syntax-code">&#123;AllParam&#125;</code> /
+          <code class="syntax-code">&#123;AllParams&#125;</code>: Lists all parameters provided to the command joined by
+          a space.
+        </li>
+        <li><code class="syntax-code">&#123;Now&#125;</code>: Returns the current date and time (in UTC)</li>
+        <li><code class="syntax-code">&#123;Random&#125;</code>: Returns a random number between 0 and 99</li>
+        <li><code class="syntax-code">&#123;Counter&#125;</code>: Returns a number that increases with every call</li>
+      </ul>
+
       <div formArrayName="responses">
         @for (response of responsesArray.controls; track $index) {
           <div class="response-row">
