--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -50,3 +50,7 @@ body {
     @include mat.all-component-colors($light-theme);
   }
 }
+
+.syntax-code {
+  color: mat.get-color-from-palette(mat.$green-palette, 500);
+}
