can now edit counter value if desired

--- a/src/app/dialogs/custom-command-editor-dialog/custom-command-editor-dialog.component.html
+++ b/src/app/dialogs/custom-command-editor-dialog/custom-command-editor-dialog.component.html
@@ -145,6 +145,34 @@
       </div>
     </mat-tab>
 
+    <!-- Counter -->
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon>
+          <ng-icon name="bootstrap9Square"></ng-icon>
+        </mat-icon>
+        Counter
+      </ng-template>
+
+      <div formGroupName="counter">
+        <p>
+          If you use <code class="syntax-code">&#123;Counter&#125;</code> in your responses, you can define the current
+          value here.
+        </p>
+
+        <div>
+          <mat-slide-toggle [formControl]="changeCounterForm">
+            <mat-label>Change Counter Value</mat-label>
+          </mat-slide-toggle>
+        </div>
+
+        <mat-form-field>
+          <mat-label>Current Value</mat-label>
+          <input matInput type="number" formControlName="value" />
+        </mat-form-field>
+      </div>
+    </mat-tab>
+
     <!-- Limitations -->
     <mat-tab>
       <ng-template mat-tab-label>
@@ -252,5 +280,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="undefined">Cancel</button>
-  <button mat-flat-button color="primary" [disabled]="form.invalid" [mat-dialog-close]="form.value">Save</button>
+  <button mat-flat-button color="primary" [disabled]="form.invalid" (click)="saveChanges()">Save</button>
 </div>
