--- a/src/app/pages/commands/shoutout/shoutout.component.html
+++ b/src/app/pages/commands/shoutout/shoutout.component.html
@@ -31,7 +31,7 @@
             <mat-hint> If you clear this message, the <code>!shoutout</code> command will be deactivated. </mat-hint>
           </mat-form-field>
           <mat-form-field>
-            <mat-label>Shoutout Message for Team Members</mat-label>
+            <mat-label>Shoutout Message for Team Members (optional)</mat-label>
             <input matInput formControlName="teamMessage" />
             <mat-hint>
               This message will be applied if the user you're shouting out is a member of the same stream team.
