--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -1,4 +1,4 @@
 .fac-highlight {
-  background-color: var(--fac-highlight-background);
-  color: var(--fac-highlight-color);
+  background-color: var(--fac-highlight-background) !important;
+  color: var(--fac-highlight-color) !important;
 }
