--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -38,3 +38,12 @@ input[type="number"] {
 mat-divider.mat-divider {
   margin: 10px 0;
 }
+
+.mat-mdc-card-avatar mat-icon.mat-icon {
+  width: 40px;
+  height: 40px;
+
+  ng-icon {
+    --ng-icon__size: 40px !important;
+  }
+}
