added link for later notes

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,5 @@
+// Theming for m3: https://angular-material.dev/articles/angular-material-3
+
 @use '@angular/material' as mat;
 @include mat.core();
 
