added support for visual alerts

--- a/src/app/dialogs/custom-command-editor-dialog/custom-command-editor-dialog.component.html
+++ b/src/app/dialogs/custom-command-editor-dialog/custom-command-editor-dialog.component.html
@@ -143,6 +143,12 @@
               </mat-icon>
               Add Sound Response
             </button>
+            <button mat-menu-item (click)="addResponse('Visual')">
+              <mat-icon>
+                <ng-icon name="bootstrapPersonVideo3"></ng-icon>
+              </mat-icon>
+              Add Visual Response (Alpha)
+            </button>
           </mat-menu>
         </div>
       </div>
