--- a/src/app/components/custom-command-response-form/custom-command-response-form.component.html
+++ b/src/app/components/custom-command-response-form/custom-command-response-form.component.html
@@ -18,6 +18,17 @@
       <textarea matInput formControlName="auxiliaryContent" rows="4"></textarea>
       <mat-error>{{ form | formError: 'auxiliaryContent' | async }}</mat-error>
     </mat-form-field>
+  } @else if (form.get('type')!.value === 'Visual') {
+    <mat-form-field>
+      <mat-label>Displayed Message</mat-label>
+      <textarea matInput formControlName="content" rows="4"></textarea>
+      <mat-error>{{ form | formError: 'content' | async }}</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Response Message (optional)</mat-label>
+      <textarea matInput formControlName="auxiliaryContent" rows="4"></textarea>
+      <mat-error>{{ form | formError: 'auxiliaryContent' | async }}</mat-error>
+    </mat-form-field>
   } @else {
     <input type="hidden" formControlName="content" />
     <input type="hidden" formControlName="auxiliaryContent" />
